--- a/src/components/layout/Navigation/Menu-Item/MenuItem.module.scss
+++ b/src/components/layout/Navigation/Menu-Item/MenuItem.module.scss
@@ -5,6 +5,7 @@
 .link {
 	display: flex;
 	font-size: 14px;
+	font-weight: 600;
 	align-items: center;
 	border-right: 8px solid transparent;
 	color: $color-gray-500;
