--- a/src/components/layout/Navigation/Navigation.module.scss
+++ b/src/components/layout/Navigation/Navigation.module.scss
@@ -18,3 +18,28 @@
 .logo {
 	margin-bottom: 50px;
 }
+
+.loader {
+	display: block;
+	padding-right: 30px;
+
+	br {
+		display: none;
+	}
+	&__link {
+		display: block;
+		width: 100%;
+		height: 25px;
+		margin-bottom: 20px;
+
+		&:first-child {
+			width: 80%;
+			height: 20px;
+			margin-bottom: 30px;
+		}
+
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
