redux/toastr/next-progressbar

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import './other/normalize.css';
+@import 'react-redux-toastr/src/styles/index';
 
 input[type='file'],
 input[type='file']::-webkit-file-upload-button {
