--- a/src/components/layout/Sidebar/Sidebar.module.scss
+++ b/src/components/layout/Sidebar/Sidebar.module.scss
@@ -2,3 +2,15 @@
 	border-left: 2px solid $color-gray-800;
 	padding: 30px 15px;
 }
+
+.search {
+	margin-bottom: 60px;
+}
+
+.popular {
+	margin-bottom: 60px;
+}
+
+.favorites {
+	margin-bottom: 60px;
+}
