--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -1,7 +1,9 @@
 .button {
 	display: flex;
+	width: 100%;
 	align-items: center;
 	justify-content: center;
+	border: none;
 	border-radius: 10px;
 	padding: 10px 15px;
 	color: #fff;
