--- a/src/assets/styles/variables/_color.scss
+++ b/src/assets/styles/variables/_color.scss
@@ -1,4 +1,5 @@
 $color-primary: #e30b13;
+$color-second: #41181c;
 $color-black: #000;
 $color-white: #fff;
 $color-yellow: #f5c521;
@@ -7,6 +8,7 @@ $color-gray-300: #d9dae8;
 $color-gray-500: #999aa5;
 $color-gray-600: #66676e;
 $color-gray-700: #39393f;
+$color-gray-750: #2a2a2e;
 $color-gray-800: #242529;
 $color-gray-900: #191b1f;
 $color-gray-950: #101215;
