--- a/src/components/ui/admin/admin-table/AdminTable.module.scss
+++ b/src/components/ui/admin/admin-table/AdminTable.module.scss
@@ -3,6 +3,12 @@
 }
 
 .empty {
+	display: inline-flex;
+	height: 64px;
 	font-size: 16px;
+	align-items: center;
+	padding: 0 15px;
+	background: $color-gray-700;
+	border-radius: 10px;
 	color: #fff;
 }
