--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,6 @@
 @import './other/normalize.css';
 @import 'react-redux-toastr/src/styles/index';
+@import './select.scss';
 
 input[type='file'],
 input[type='file']::-webkit-file-upload-button {
