--- a/src/components/screens/admin/movies/movie-create/MovieCreate.module.scss
+++ b/src/components/screens/admin/movies/movie-create/MovieCreate.module.scss
@@ -40,3 +40,11 @@
 	grid-row-gap: 20px;
 	margin-bottom: 60px;
 }
+
+.bottom {
+	display: grid;
+	width: 100%;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: 30px;
+	margin-bottom: 60px;
+}
