--- a/src/components/ui/slider/slide/Slide.module.scss
+++ b/src/components/ui/slider/slide/Slide.module.scss
@@ -29,12 +29,13 @@
 }
 
 .title {
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 
 .genres {
 	display: block;
-	margin-bottom: 15px;
+	font-size: 14px;
+	margin-bottom: 20px;
 	color: #fff;
 }
 
