--- a/src/components/ui/not-found/NotFound.module.scss
+++ b/src/components/ui/not-found/NotFound.module.scss
@@ -1,4 +1,8 @@
 .empty {
-	font-size: 18px;
+	display: inline-block;
+	font-size: 12px;
+	padding: 15px 30px;
+	border-radius: 10px;
+	background: $color-gray-950;
 	color: #fff;
 }
