--- a/src/components/screens/auth/Auth.module.scss
+++ b/src/components/screens/auth/Auth.module.scss
@@ -1,6 +1,14 @@
 .auth {
 	display: flex;
 	height: 100%;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+}
+
+.data {
+	display: grid;
+	grid-row-gap: 10px;
+	margin-top: 30px;
+	color: #fff;
 }
