--- a/src/components/screens/favorites/Favorites.module.scss
+++ b/src/components/screens/favorites/Favorites.module.scss
@@ -7,3 +7,11 @@
 .title {
 	margin-bottom: 30px;
 }
+
+.link {
+	font-size: 14px;
+	font-weight: 600;
+	padding: 10px 15px;
+	border-radius: 10px;
+	background: $color-primary;
+}
